Fixed spacing in 3 main sections, added links to ed, experience

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@ body {
   float: left;
   width: 20%;
   display: inline-block;
+  padding-right: 20px;
 }
 
 .floatright {
@@ -19,7 +20,7 @@ body {
 img {
   width: 100%;
   border-radius: 100%;
-  padding: 15px;
+  padding: 3%;
   box-shadow: 3px 3px 3px 3px black;
   margin-top: 10px;
 }
@@ -65,6 +66,7 @@ ol {
 
 .listhead {
   font-weight: bold;
+  margin-bottom: 0;
 }
 
 h3 {
